<resources>
    <string name="app_name">车联网</string>
    <string name="action_search">查找</string>
    <string name="action_add">添加</string>
    <string name="menu_group_chat">违章查询</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_add_friend">待定</string>
    <string name="menu_scan">扫一扫</string>
    <string name="tab_home">首页</string>
    <string name="tab_contact">音乐</string>
    <string name="tab_found">订单</string>
    <string name="tab_me">我</string>

    <string name="phonenum_btn">验证手机号</string>
    <string name="register">注册</string>

    <string name="username">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="confirmpwd">请再次输入密码</string>

    <string name="car_type">汽车型号</string>
    <string name="car_num">车牌号</string>
    <string name="car_engine_num">发动机号</string>
    <string name="car_level">车身级别</string>
    <string name="car_brand">汽车品牌</string>
    <string name="car_mileage">汽车里程数</string>
    <string name="car_gasnum">汽车汽油量</string>
    <string name="car_engine_ok">发动机性能</string>
    <string name="car_transmission_ok">变速器性能</string>
    <string name="car_light_ok">车灯好坏</string>

    <string name="dialog_distance_title">请选择检索范围</string>
    <string name="kilometre_3">3km</string>
    <string name="kilometre_5">5km</string>
    <string name="kilometre_8">8km</string>
    <string name="kilometre_10">10km</string>
    <string name="station_price">本站油价</string>
    <string name="province_price">省控基准油价</string>
    <string name="text_load">正在获取信息…</string>
    <string name="search_range">选择搜索范围</string>
</resources>
