<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hyman="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/tab_bg"
        android:orientation="horizontal">

        <com.codekong.vehiclenetworking.view.ChangeColorIconWithText
            android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            hyman:micon="@mipmap/ic_home_grey600_48dp"
            hyman:mtext="@string/tab_home"
            hyman:mtext_size="12sp"
            hyman:mcolor="#ff45c01a" />

        <com.codekong.vehiclenetworking.view.ChangeColorIconWithText
            android:id="@+id/id_indicator_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            hyman:micon="@mipmap/ic_queue_music_grey600_48dp"
            hyman:mtext="@string/tab_contact"
            hyman:mtext_size="12sp"
            hyman:mcolor="#ff45c01a" />

        <com.codekong.vehiclenetworking.view.ChangeColorIconWithText
            android:id="@+id/id_indicator_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            hyman:micon="@mipmap/ic_receipt_grey600_48dp"
            hyman:mtext="@string/tab_found"
            hyman:mtext_size="12sp"
            hyman:mcolor="#ff45c01a" />

        <com.codekong.vehiclenetworking.view.ChangeColorIconWithText
            android:id="@+id/id_indicator_four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            hyman:micon="@mipmap/ic_account_circle_grey600_48dp"
            hyman:mtext="@string/tab_me"
            hyman:mtext_size="12sp"
            hyman:mcolor="#ff45c01a" />
    </LinearLayout>

</LinearLayout>
