<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codekong.vehiclenetworking.activity.RegisterActivity"
    android:orientation="vertical">


    <ImageButton
        android:id="@+id/btn_bind_phone"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/yanphonenum_btn"
        android:src="@drawable/normal_bg_selector"/>
    <TextView
        android:id="@+id/phonenum"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/page_margin_top"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="25sp"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/page_margin_top"
        android:drawableLeft="@mipmap/ic_perm_identity_grey600_24dp"
        android:hint="@string/username"
        android:visibility="invisible"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/page_margin_top"
        android:password="true"
        android:drawableLeft="@mipmap/ic_lock_open_grey600_24dp"
        android:hint="@string/password"
        android:visibility="invisible"/>
    <EditText
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/page_margin_top"
        android:password="true"
        android:drawableLeft="@mipmap/ic_lock_open_grey600_24dp"
        android:hint="@string/confirmpwd"
        android:visibility="invisible"/>
    <ImageButton
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/page_margin_top"
        android:background="@drawable/register_btn"
        android:src="@drawable/normal_bg_selector"
        android:visibility="invisible"/>
</LinearLayout>
