<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingLeft="5dp">

    <ImageView
        android:id="@+id/car_mark"
        android:layout_width="85dp"
        android:layout_height="90dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="top" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="2dp"
        android:paddingLeft="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:textSize="15dp"
            android:textColor="@color/green"
            android:text="@string/car_brand" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:textSize="15dp"
            android:textColor="@color/green"
            android:text="@string/car_type"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:textColor="@color/green"
            android:textSize="15dp"
            android:text="@string/car_engine_num"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:textColor="@color/green"
            android:textSize="15dp"
            android:text="@string/car_engine_num"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:textSize="15dp"
            android:textColor="@color/green"
            android:text="@string/car_level"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="40dp">
        <TextView
            android:id="@+id/car_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:maxLines="1"
            android:paddingBottom="2dp"
            android:text="car_brand" />

        <TextView
            android:id="@+id/car_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingBottom="2dp"
            android:textSize="15dp"
            android:text="car_type" />

        <TextView
            android:id="@+id/car_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:maxLines="1"
            android:paddingBottom="2dp"
            android:text="car_num" />

        <TextView
            android:id="@+id/car_engine_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:textSize="15dp"
            android:maxLines="1"
            android:text="car_engine_num" />

        <TextView
            android:id="@+id/car_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:textSize="15dp"
            android:maxLines="1"
            android:text="car_level" />

    </LinearLayout>

</LinearLayout>
